Fix close inspector button being covered by select parent el button.

--- a/src/fromjs.css
+++ b/src/fromjs.css
@@ -42,6 +42,7 @@ button:focus, {
     position: fixed;
     top: 0;
     right: 0;
+    z-index: 50;
 
     color: white;
     line-height: 22px;
